implementing responsive design

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <link rel="mask-icon" href="favicon_package_v0.16/safari-pinned-tab.svg" color="#000000">
     <meta name="msapplication-TileColor" content="#b91d47">
     <meta name="theme-color" content="#ffffff">
+    <script src="https://kit.fontawesome.com/61c0823f99.js" crossorigin="anonymous"></script>
+
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom py-0" role="navigation">
         <a class="navbar-brand py-0" href="#">
@@ -105,7 +107,7 @@
                     <p>
                         SOME TECHNOLOGIES I'VE WORKED WITH:
                     </p>
-                    <div>
+                    <div class="logos">
                         <img src="images/logos/html5-original-wordmark.svg" class="icon"/>
                         <img src="images/logos/css3-original-wordmark.svg" class="icon"/>
                         <img src="images/logos/javascript-original.svg" class="icon"/>
@@ -141,19 +143,19 @@
                 </p>
             </div>
             <div class="container-fluid project-work">
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img class="card-img-top" src="..." alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">The Witcher Bestiary Website</h5>
+                      <p class="card-text">Fan project recreating The Witcher Bestiary from the popular videogame 'The Witcher 3: Wild Hunt'. Made with basic HTML, CSS & JavaScript.</p>
+                      <a href="#" class="btn btn-primary" target="_blank">GO TO PROJECT</a>
                     </div>
                   </div>
             </div>
-            <div class="container">
+            <div class="container profile">
                 <p class="info">
                     You can also check out more of my work on my Github: 
-                    <a href="https://github.com/Liam-McCormack">Liam's Github Profile</a> <img src="images/logos/github-original.svg" class="small-icon"/> 
+                    <a href="https://github.com/Liam-McCormack" target="_blank">Liam's Github Profile</a> <img src="images/logos/github-original.svg" class="small-icon"/> 
                 </p>
             </div>
         </div>
@@ -169,7 +171,7 @@
                 I'm currently <u style="color:rgb(13, 190, 7)"><strong>available</strong></u> and looking for work in Manchester/North West!
                 Please grab a copy of my CV below.
             </p>
-            <button class="btn btn-light cv" href="#" role="button" type="button">DOWNLOAD CV</button>
+            <button class="btn btn-light cv" href="" role="button" type="button"><a href="#" download>DOWNLOAD CV</a></button>
             <p class="info">
                 I can be contacted on the following email address:
             </p>
@@ -180,8 +182,8 @@
                 You can also reach me on the following socials. Thanks for your time!
             </p>
             <div class="socials">
-                <a href="https://twitter.com/Liam_Codes"><img src="images/logos/twitter-original.svg" class="icon"/></a>   
-                <a href="https://www.linkedin.com/in/liam-mccormack-3024171aa/"><img src="images/logos/linkedin-original.svg" class="icon" href="https://www.linkedin.com/in/liam-mccormack-3024171aa/"/></a>   
+                <a href="https://twitter.com/Liam_Codes" target="_blank"><img src="images/logos/twitter-original.svg" class="icon"/></a>   
+                <a href="https://www.linkedin.com/in/liam-mccormack-3024171aa/" target="_blank"><img src="images/logos/linkedin-original.svg" class="icon" href="https://www.linkedin.com/in/liam-mccormack-3024171aa/"/></a>   
             </div>
         </div>
     </section>
