Added Witcher project image

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="container">
                 <p class="info">
                     I've been coding since March 2020, making use of learning resources such as Codecademy and FreeCodeCamp, 
-                    and also attending the <a href="https://northcoders.com/">Northcoders</a> coding school in Manchester.
+                    and also attending the <a href="https://northcoders.com/" target="_blank">Northcoders</a> coding school in Manchester.
                 </p>
                 <p class="info">
                     I'm always eager to learn new skills, and hope to positively contribute to a number of projects in this fast paced industry.
@@ -144,7 +144,7 @@
             </div>
             <div class="container-fluid project-work">
                 <div class="card">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="./images/bestiary-site.png" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">The Witcher Bestiary Website</h5>
                       <p class="card-text">Fan project recreating The Witcher Bestiary from the popular videogame 'The Witcher 3: Wild Hunt'. Made with basic HTML, CSS & JavaScript.</p>
