Sizing changes on icons in Contact

--- a/index.html
+++ b/index.html
@@ -182,8 +182,12 @@
                 You can also reach me on the following socials. Thanks for your time!
             </p>
             <div class="socials">
-                <a href="https://twitter.com/Liam_Codes" target="_blank"><img src="images/logos/twitter-original.svg" class="icon"/></a>   
-                <a href="https://www.linkedin.com/in/liam-mccormack-3024171aa/" target="_blank"><img src="images/logos/linkedin-original.svg" class="icon" href="https://www.linkedin.com/in/liam-mccormack-3024171aa/"/></a>   
+                <a href="https://twitter.com/Liam_Codes" target="_blank">
+                    <img src="images/logos/twitter-original.svg" class="icon" alt="twitter logo"/>
+                </a>   
+                <a href="https://www.linkedin.com/in/liam-mccormack-3024171aa/" target="_blank">
+                    <img src="images/logos/linkedin-original.svg" class="icon" alt="linkedin logo"/>
+                </a>   
             </div>
         </div>
     </section>
