Added project link

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                     <img class="card-img-top" src="./images/bestiary-site.png" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">The Witcher Bestiary Website</h5>
-                      <p class="card-text">Fan project recreating The Witcher Bestiary from the popular videogame 'The Witcher 3: Wild Hunt'. Made with basic HTML, CSS & JavaScript.</p>
-                      <a href="#" class="btn btn-primary" target="_blank">GO TO PROJECT</a>
+                      <p class="card-text">Fan project recreating The Witcher Bestiary from the popular videogame 'The Witcher 3: Wild Hunt'. Made with basic HTML, CSS, JavaScript & jQuery.</p>
+                      <a href="https://eloquent-lovelace-360d57.netlify.app/" class="btn btn-primary" target="_blank">GO TO PROJECT</a>
                     </div>
                   </div>
             </div>
