added Date function and fixe onclick for chevron

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 TV professional turned Junior Software Engineer
             </p>
         </div>
-        <div id='arrow'>
+        <div class='arrow'>
             <i class="fas fa-chevron-down" aria-hidden="true"></i>
         </div>
     </section>
@@ -78,19 +78,30 @@
             </h2>
             <img src="images/portfolio-profpic.png" class="prof-pic">
             <div class="container">
-                <p class="info">
+                <p class="info" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
                     Hi! My name is Liam and I'm a Junior Software Engineer with a passion for front end development and
                     design.
                     Having attended and gained a degree at the University of Salford, I worked as a freelancer in the TV
                     industry for 3 years.
+                    <img>
+                    <img>
+                    <img>
+                </p>
+                <p class="info" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
                     Now, I use my passion for creativity in the Technology industry and develop websites and apps!
                     I aspire toward a career that allows me to express my creativity by crafting great software and
                     engaging experiences.
+                    <img>
+                    <img>
+                    <img>
                 </p>
-                <p class="info">
+                <p class="info" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
                     When I'm not at the computer, I also enjoy going to the gym, long walks and petting my
                     French-Bulldog Maximus.
                 </p>
+                <img>
+                <img>
+                <img>
             </div>
         </div>
     </section>
@@ -114,7 +125,7 @@
                 </p>
             </div>
             <div class="container tech-work">
-                <div class="techs">
+                <div class="techs" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
                     <p>
                         SOME TECHNOLOGIES I'VE WORKED WITH:
                     </p>
@@ -133,7 +144,7 @@
                         <img src="images/logos/heroku-plain-wordmark.svg" class="icon" />
                     </div>
                 </div>
-                <div class="work">
+                <div class="work" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
                     <p>
                         WHERE I'VE WORKED:
                     </p>
@@ -214,7 +225,7 @@
         <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top cv" role="button">BACK TO TOP</a>
         <p>
             Liam McCormack
-            <span id="date">2020</span>
+            <span id="date"></span>
         </p>
     </footer>
 
@@ -226,7 +237,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 1200,
+            duration: 1000,
         });
     </script>
     <script src="scripts/main.js"></script>
