--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
             <h1 class="display-1">
                 HI, I'M LIAM
             </h1>
-            <p class="lead px-3">
-                TV professional turned Junior Software Engineer
+            <p class="lead px-3 type-effect">
             </p>
         </div>
         <div class='arrow' data-aos="fade-up" data-aos-anchor-placement="center-bottom">
@@ -210,27 +209,78 @@
                 GET IN TOUCH
             </h2>
             <p class="info">
-                I'm currently <u style="color:rgb(13, 190, 7)"><strong>available</strong></u> and looking for work in
-                Manchester/North West!
+                I'm currently <u style="color:rgb(13, 190, 7)"><strong>available</strong></u>!
                 Please grab a copy of my CV below.
             </p>
-
+            <button type="submit" class="btn btn-primary cv" data-toggle="modal" data-target="#downloaded-cv">
+                <a href="path_to_file" download="proposed_file_name" style="color:#ffffff" data-toggle="modal"
+                    data-target="#staticBackdrop">
+                    Download CV
+                    <span style='font-size:20px;'>&#128196;</span>
+                </a>
+            </button>
+            <div class="modal fade" id="downloaded-cv" data-keyboard="false" tabindex="-1"
+                aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            Thanks for the download!
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary thumbs-up" data-dismiss="modal">
+                                <span style='font-size:30px;'>&#128077;</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <p class="info">
-                I can be contacted on the following email address:
+                Or you can contact me on the form below:
             </p>
-            <p class="lead">
-                <a href="mailto:liammccormack@outlook.com">liammccormack@outlook.com</a>
-            </p>
-
-            <div id="back-to-top" class="returnArrow " href="#" data-aos="fade-up">
+            <div class='container'>
+                <form method="post"
+                    action="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#108;&#105;&#97;&#109;&#109;&#99;&#99;&#111;&#114;&#109;&#97;&#99;&#107;&#64;&#111;&#117;&#116;&#108;&#111;&#111;&#107;&#46;&#99;&#111;&#109;">
+                    <div class="form-group">
+                        <label for="email">Your email address</label>
+                        <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="name">Your name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Joe Bloggs">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Your message</label>
+                        <textarea class="form-control" id="message" rows="3"
+                            placeholder="The meaning of life is..."></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#submitted">
+                        Submit
+                        <span style='font-size:20px;'>&#128232;</span>
+                    </button>
+                    <div class="modal fade" id="submitted" data-keyboard="false" tabindex="-1"
+                        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    Thanks for the message! I will try to get back to you ASAP.
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary thumbs-up" data-dismiss="modal">
+                                        <span style='font-size:30px;'>&#128077;</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div id="back-to-top" class="returnArrow " href="#">
                 <i class="fas fa-chevron-circle-up"></i>
             </div>
         </div>
 
     </section>
     <footer>
-        <!-- <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top cv" role="button">BACK TO TOP</a> -->
-
         <p>
             Liam McCormack
             <span id="date"></span>
@@ -243,6 +293,8 @@
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
+
     <script>
         AOS.init({
             duration: 1000,
