Testing mailto: links work, had issues on Ubuntu

--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
                 Or you can contact me on the form below:
             </p>
             <div class='container'>
-                <form method="post"
-                    action="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#108;&#105;&#97;&#109;&#109;&#99;&#99;&#111;&#114;&#109;&#97;&#99;&#107;&#64;&#111;&#117;&#116;&#108;&#111;&#111;&#107;&#46;&#99;&#111;&#109;">
+                <form method="post" action="mailto:liammccormack@outlook.com">
+                    <!-- action="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#108;&#105;&#97;&#109;&#109;&#99;&#99;&#111;&#114;&#109;&#97;&#99;&#107;&#64;&#111;&#117;&#116;&#108;&#111;&#111;&#107;&#46;&#99;&#111;&#109;"> -->
                     <div class="form-group">
                         <label for="email">Your email address</label>
                         <input type="email" class="form-control" id="email" placeholder="name@example.com">
