--- a/index.html
+++ b/index.html
@@ -238,22 +238,23 @@
                 Or you can contact me on the form below:
             </p>
             <div class='container'>
-                <form method="post" action="mailto:liammccormack@outlook.com">
+                <form method="post" action="mailto:liammccormack@outlook.com" enctype="text/plain">
                     <!-- action="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#108;&#105;&#97;&#109;&#109;&#99;&#99;&#111;&#114;&#109;&#97;&#99;&#107;&#64;&#111;&#117;&#116;&#108;&#111;&#111;&#107;&#46;&#99;&#111;&#109;"> -->
                     <div class="form-group">
                         <label for="email">Your email address</label>
-                        <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                        <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com">
                     </div>
                     <div class="form-group">
                         <label for="name">Your name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Joe Bloggs">
+                        <input type="text" class="form-control" name="name" id="name" placeholder="Joe Bloggs">
                     </div>
                     <div class="form-group">
                         <label for="message">Your message</label>
                         <textarea class="form-control" id="message" rows="3"
                             placeholder="The meaning of life is..."></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#submitted">
+                    <button type="submit" class="btn btn-primary" name="submit" data-toggle="modal"
+                        data-target="#submitted">
                         Submit
                         <span style='font-size:20px;'>&#128232;</span>
                     </button>
