added CV to download button

--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
                 Please grab a copy of my CV below.
             </p>
             <button type="submit" class="btn btn-primary cv" data-toggle="modal" data-target="#downloaded-cv">
-                <a href="./images/experience-pics/404.jpeg" download="404.jpeg" style="color:#ffffff">
+                <a href="./images/Liam McCormack Cirriculum Vitae.pdf" download="Liam McCormack Cirriculum Vitae.pdf"
+                    style="color:#ffffff">
                     Download CV
                     <span style='font-size:20px;'>&#128196;</span>
                 </a>
