Added socials to landing page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/61c0823f99.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
 
 </head>
 
@@ -63,6 +64,17 @@
             </h1>
             <p class="lead px-3 type-effect">
             </p>
+            <div class="container socials">
+                <a class="socials-icon" href="https://www.linkedin.com/in/liam-mccormack-3024171aa/">
+                    <i class="devicon-linkedin-plain"></i>
+                </a>
+                <a class="socials-icon" href="https://github.com/Liam-McCormack">
+                    <i class="devicon-github-plain"></i>
+                </a>
+                <a class="socials-icon twitter" href="https://twitter.com/Liam_Codes">
+                    <i class="devicon-twitter-plain"></i>
+                </a>
+            </div>
         </div>
         <div class='arrow' data-aos="fade-up" data-aos-anchor-placement="center-bottom">
             <i class="fas fa-chevron-circle-down" aria-hidden="true"></i>
